--- a/web/src/Styles/styles.scss
+++ b/web/src/Styles/styles.scss
@@ -26,7 +26,7 @@
   @include flexing("row");
   align-items: center;
   justify-content: flex-end;
-  button {
+  .selectorButtons button {
     border: none;
     width: 45px;
     font-weight: bold;
@@ -56,8 +56,8 @@
   text-align: right;
 }
 
-@media only screen and (max-width: 600px) {
-  .selector button {
+@media only screen and (max-width: 559.5px) {
+  .selectorButtons {
     display: none;
   }
   .dropdown {
@@ -65,7 +65,7 @@
   }
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 559.5px) {
   .dropdown {
     display: none;
   }
