--- a/web/src/components/Header.scss
+++ b/web/src/components/Header.scss
@@ -1,6 +1,15 @@
+$white: #fff;
+$black: #000;
+$bg-button-inactive: #323232;
+$btn-text-inactive: #6e6e6e;
+
 header {
   background-color: black;
   display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+
   img {
     width: 150px;
     margin: 10px;
@@ -10,6 +19,37 @@ header {
     }
     @media (max-width: 400px) {
       width: 100px;
+    }
+  }
+  div {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    margin-right: 30px;
+
+    @media (min-width: 1000px) {
+      margin-right: 15%;
+    }
+    @media (max-width: 400px) {
+      display: none;
+    }
+    .btn {
+      width: 50px;
+      height: 25px;
+      margin: 1px;
+      background-color: $bg-button-inactive;
+      border: none;
+      color: $btn-text-inactive;
+      font-weight: bolder;
+      &:active {
+        background-color: $white;
+        color: $black;
+      }
+    }
+    p {
+      color: white;
+      margin-right: 10px;
+      font-size: smaller;
     }
   }
 }
