viewport testing started

--- a/web/src/Styling/Variable.scss
+++ b/web/src/Styling/Variable.scss
@@ -1,8 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Tilt+Warp&display=swap");
+$fontStyle: "Tilt Warp", cursive;
+
 //colours
 $black: black;
 $background: #4e4d4d;
 $buttonColour: #323232;
 $white: white;
+$grey: #a5a4a4;
+$offWhite: #e3e3e3;
 
 // header height
 $headerHeight: 100px;
@@ -10,7 +15,8 @@ $headerHeight: 100px;
 @mixin breakpoint($point) {
   @if $point == md {
     //768px
-    @media (min-width: 48em) {
+    @media (max-width: 48em) {
+      //1em=16px
       @content;
     }
   }
