--- a/web/src/Styling/Header.module.scss
+++ b/web/src/Styling/Header.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   padding: 0 1.5rem;
   @include breakpoint(md) {
-    padding: 0.3rem;
+    padding: 0.1px;
   }
   transition: 0.3s ease all;
 
@@ -20,13 +20,20 @@
     align-items: center;
     justify-content: space-around;
     position: relative;
-    z-index: 100;
+    @include breakpoint(md) {
+      justify-content: space-between;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
 
     &__logo {
       height: 60%;
+      @include breakpoint(md) {
+        height: 30%;
+      }
     }
 
-    &__buttons {
+    &__ages {
       display: flex;
       flex-direction: "row";
       align-items: center;
@@ -35,25 +42,50 @@
         display: flex;
         flex-direction: "row";
         align-items: center;
-        color: white;
+        color: $offWhite;
         margin-right: 10px;
+        font-size: 18px;
+        font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
       }
 
       & button {
         border: none;
         margin-left: 1%;
-        width: 60px;
-        height: 45px;
+        width: 75px;
+        height: 43px;
+        font-weight: bold;
+        font-family: $fontStyle;
+        font-size: 19px;
+        @include breakpoint(md) {
+          display: none;
+        }
       }
 
       &__selected {
-        background-color: $white;
         cursor: pointer;
+        background-color: $white;
+        color: $black;
       }
 
       &__unselected {
-        cursor: pointer;
         background-color: $buttonColour;
+        cursor: pointer;
+        color: $grey;
+      }
+    }
+
+    & select {
+      display: none;
+      @include breakpoint(md) {
+        display: block;
+        border: none;
+        width: 75px;
+        height: 37px;
+        font-weight: bold;
+        font-family: $fontStyle;
+        font-size: 18px;
+        text-align-last: center;
       }
     }
   }
