added animation, but will be removed

--- a/web/src/Styling/TopicCard.css
+++ b/web/src/Styling/TopicCard.css
@@ -1,21 +1,30 @@
+@keyframes move-image-center {
+  from {
+    transform: translate(60%, 30%);
+  }
+  to {
+    transform: scale(0.75) translate(0%, 30%);
+    width: 150px;
+  }
+}
 .topic-card-parent {
+  margin: 0px;
   margin-top: 20px;
   display: flex;
   justify-content: center;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 601px) {
   .topic-card-parent img {
-    translate: 0% 30%;
-    width: 150px;
-  }
-  .topic-card-parent .topic-card {
-    width: 400px;
+    width: 200px;
+    animation-name: move-image-center;
+    animation-fill-mode: forwards;
+    animation-duration: 1s;
   }
 }
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 602px) {
   .topic-card-parent img {
-    translate: 75% 30%;
     width: 200px;
+    translate: 60% 30%;
   }
   .topic-card-parent .topic-card {
     width: 600px;
@@ -42,4 +51,11 @@
 }
 .topic-card-parent .topic-card img {
   border-radius: 50%;
+}
+.topic-card-parent .topic-card button {
+  border: none;
+  padding: 10px;
+  font-size: 15px;
+  padding-left: 50px;
+  padding-right: 50px;
 }/*# sourceMappingURL=TopicCard.css.map */
