--- a/web/src/Styling/TopicCard.css
+++ b/web/src/Styling/TopicCard.css
@@ -1,12 +1,3 @@
-@keyframes move-image-center {
-  from {
-    transform: translate(60%, 30%);
-  }
-  to {
-    transform: scale(0.75) translate(0%, 30%);
-    width: 150px;
-  }
-}
 .topic-card-parent {
   margin: 0px;
   margin-top: 20px;
@@ -14,20 +5,19 @@
   justify-content: center;
 }
 @media screen and (max-width: 601px) {
-  .topic-card-parent img {
-    width: 200px;
-    animation-name: move-image-center;
-    animation-fill-mode: forwards;
-    animation-duration: 1s;
+  .topic-card-parent .topic-card-img-btn {
+    display: block;
+  }
+  .topic-card-parent .topic-card-img-btn img {
+    width: 150px;
   }
 }
-@media screen and (min-width: 602px) {
-  .topic-card-parent img {
-    width: 200px;
-    translate: 60% 30%;
+@media screen and (max-width: 601px) and (min-width: 601px) {
+  .topic-card-parent .topic-card-img-btn {
+    display: flex;
   }
-  .topic-card-parent .topic-card {
-    width: 600px;
+  .topic-card-parent .topic-card-img-btn img {
+    width: 200px;
   }
 }
 .topic-card-parent .topic-card {
