--- a/web/src/Styling/TopicCard.scss
+++ b/web/src/Styling/TopicCard.scss
@@ -6,39 +6,30 @@ $type:$phone-screen-width;
 $image-displacement:60%;
 
 $screen-size-counter: 'unknown';
+@mixin screen-size-change {
+        @media screen and (max-width: 601px){
+        .topic-card-img-btn {
+            display:block;
+            & img {
+                width:150px;
+            }
+        }
+        @media screen and (min-width: 601px) {
+            .topic-card-img-btn {
+                display:flex;
+                & img {
+                    width:200px;
+                }
+            }
+        }
 
-@mixin screen-size {
-    @media screen and (max-width: 601px){
-        img {
-        width:200px;
-        animation-name: move-image-center;
-        animation-fill-mode:forwards;
-        animation-duration:1s
-        
-        }
-    }
-    @media screen and (min-width: 602px) {
-        img {
-            width:200px;
-            translate: $image-displacement 30%;
-        }
-        .topic-card {
-            width:$wide-screen-width;
-        }
     }
 }
-@keyframes move-image-center {
-    from {
-        transform:translate($image-displacement, 30%);
-    }
-    to {
-        transform:scale(0.75) translate(0% ,30%);
-        width:150px;
-    }
-}
+
+
 
 .topic-card-parent {
-    @include screen-size;
+    @include screen-size-change;
     margin:0px;
     margin-top:20px;
     display:flex;
