--- a/web/src/Styling/TopicCard.css
+++ b/web/src/Styling/TopicCard.css
@@ -5,19 +5,30 @@
   justify-content: center;
 }
 @media screen and (max-width: 601px) {
-  .topic-card-parent .topic-card-img-btn {
-    display: block;
+  .topic-card-parent .topic-card {
+    width: 100vh;
   }
-  .topic-card-parent .topic-card-img-btn img {
-    width: 150px;
+  .topic-card-parent .topic-card-img-btn {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .topic-card-parent .topic-card-img-btn .topic-card-img {
+    transform: scale(0.75);
+    transition: transform 300ms ease-in;
   }
 }
-@media screen and (max-width: 601px) and (min-width: 601px) {
-  .topic-card-parent .topic-card-img-btn {
-    display: flex;
+@media screen and (min-width: 602px) {
+  .topic-card-parent .topic-card {
+    width: 600px;
   }
-  .topic-card-parent .topic-card-img-btn img {
-    width: 200px;
+  .topic-card-parent .topic-card-img-btn {
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+  .topic-card-parent .topic-card-img-btn .topic-card-img {
+    transform: scale(1);
+    transition: transform 300ms ease-out;
   }
 }
 .topic-card-parent .topic-card {
@@ -39,13 +50,30 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
-.topic-card-parent .topic-card img {
-  border-radius: 50%;
+.topic-card-parent .topic-card .topic-card-img-btn {
+  display: flex;
+  width: 100%;
+  translate: 0px 30%;
 }
-.topic-card-parent .topic-card button {
+.topic-card-parent .topic-card .topic-card-img-btn button {
   border: none;
   padding: 10px;
   font-size: 15px;
   padding-left: 50px;
   padding-right: 50px;
+  width: 200px;
+  height: 50px;
+}
+.topic-card-parent .topic-card .topic-card-img-btn .topic-card-img {
+  display: flex;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: rgb(49, 38, 38);
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+.topic-card-parent .topic-card .topic-card-img-btn .topic-card-img img {
+  height: 100%;
 }/*# sourceMappingURL=TopicCard.css.map */
