--- a/web/src/Styling/TopicCard.css
+++ b/web/src/Styling/TopicCard.css
@@ -66,6 +66,10 @@
   padding-right: 50px;
   width: 200px;
   height: 50px;
+  font-weight: bold;
+}
+.topic-card-parent .topic-card .topic-card-img-btn button:hover {
+  background-color: lightgrey;
 }
 .topic-card-parent .topic-card .topic-card-img-btn .topic-card-img {
   display: flex;
