--- a/web/src/Styling/TopicCard.css
+++ b/web/src/Styling/TopicCard.css
@@ -1,5 +1,4 @@
 .topic-card-parent {
-  margin: 0px;
   margin-top: 20px;
   display: flex;
   justify-content: center;
@@ -32,25 +31,24 @@
   }
 }
 .topic-card-parent .topic-card {
-  border: 2px solid black;
+  background-color: white;
 }
 .topic-card-parent .topic-card .topic-card-description {
-  padding-left: 1em;
-  padding-right: 1em;
+  padding-left: 2em;
+  padding-right: 2em;
   text-align: justify;
 }
 .topic-card-parent .topic-card .topic-card-description .error {
   border: 2px solid red;
 }
 .topic-card-parent .topic-card .topic-card-title {
-  margin: 0px;
-  padding-left: 75px;
+  padding-left: 2em;
+  padding-right: 2em;
   display: flex;
-  border-bottom: 2px solid grey;
   align-self: center;
 }
 .topic-card-parent .topic-card .topic-card-title h1 {
-  margin-top: 10px;
+  margin-top: 20px;
   margin-bottom: 10px;
 }
 .topic-card-parent .topic-card .topic-card-img-btn {
@@ -60,14 +58,15 @@
 }
 .topic-card-parent .topic-card .topic-card-img-btn button {
   border: none;
-  padding: 10px;
   font-size: 15px;
   padding-left: 50px;
   padding-right: 50px;
-  width: 200px;
+  width: 275px;
   height: 50px;
   font-weight: bold;
+  background-color: #d9d9d9;
 }
+
 .topic-card-parent .topic-card .topic-card-img-btn button:hover {
   background-color: lightgrey;
   transition: all 200ms ease-in-out;
@@ -81,7 +80,8 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  translate: 20px;
 }
 .topic-card-parent .topic-card .topic-card-img-btn .topic-card-img img {
   height: 100%;
-}/*# sourceMappingURL=TopicCard.css.map */
+} /*# sourceMappingURL=TopicCard.css.map */
