--- a/web/src/Styling/TopicCard.scss
+++ b/web/src/Styling/TopicCard.scss
@@ -1,107 +1,98 @@
-
-
-$wide-screen-width:600px;
-$phone-screen-width:100vh;
-$image-displacement-screen:40%,30%;
-$image-displacement-phone: 0%,30%;
-
+$wide-screen-width: 600px;
+$phone-screen-width: 100vh;
+$image-displacement-screen: 40%, 30%;
+$image-displacement-phone: 0%, 30%;
 
 @mixin screen-size-change {
-        @media screen and (max-width: 601px){
-        .topic-card {
-            width:$phone-screen-width;
-        }
-        .topic-card-img-btn {
-            flex-direction:column;
-            align-items: center;
-            justify-content: center;
-            & .topic-card-img {
-                transform:scale(0.75);
-                transition:transform 300ms ease-in;
-            }
-        }
+  @media screen and (max-width: 601px) {
+    .topic-card {
+      width: $phone-screen-width;
     }
-        @media screen and (min-width: 602px) {
-            .topic-card {
-                width:$wide-screen-width;
-            }
-            .topic-card-img-btn {
-                flex-direction:row;
-                justify-content: space-evenly;
-                & .topic-card-img {
-                    // transform:translate($image-displacement-screen);
-                    transform:scale(1);
-                    transition:transform 300ms ease-out;
-                }
-            }
-        }
-
+    .topic-card-img-btn {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      & .topic-card-img {
+        transform: scale(0.75);
+        transition: transform 300ms ease-in;
+      }
+    }
+  }
+  @media screen and (min-width: 602px) {
+    .topic-card {
+      width: $wide-screen-width;
+    }
+    .topic-card-img-btn {
+      flex-direction: row;
+      justify-content: space-evenly;
+      & .topic-card-img {
+        // transform:translate($image-displacement-screen);
+        transform: scale(1);
+        transition: transform 300ms ease-out;
+      }
+    }
+  }
 }
 
-
-
 .topic-card-parent {
-    @include screen-size-change;
-    margin:0px;
-    margin-top:20px;
-    display:flex;
-    justify-content:center;
-    & .topic-card {
-        border:2px solid black;
-        & .topic-card-description {
-            padding-left:1em;
-            padding-right:1em;
-            text-align:justify;
-            & .error {
-                border:2px solid red;
-            }
-        }
-        & .topic-card-title {
-            margin:0px;
-            padding-left:75px;
-            display:flex;
-            border-bottom:2px solid grey;
-            align-self:center;
-            & h1 {
-                margin-top: 10px;
-                margin-bottom:10px;
-                
-            }
-        }
-        & .topic-card-img-btn {
-            display:flex;
-            width:100%;
-            translate: 0px 30%;
-            & button {
-                border:none;
-                padding:10px;
-                font-size:15px;
-                padding-left:50px;
-                padding-right:50px;
-                width:200px;
-                height:50px;
-                font-weight:bold;
-                &:hover {
-                    background-color: lightgrey;
-                    transition: all 200ms ease-in-out;
-                }
-            }
-            & .topic-card-img {
-                display:flex;
-                width:200px;
-                height:200px;
-                border-radius:50%;
-                background-color: rgb(49, 38, 38);
-                justify-content: center;
-                align-items: center;
-                overflow:hidden;
-                & img {
-                    height:100%;
-                }
+  @include screen-size-change;
+  margin: 0px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  & .topic-card {
+    border: none !important;
+    & .topic-card-description {
+      padding-left: 1em;
+      padding-right: 1em;
+      text-align: justify;
+      border: none !important;
 
-                
-            }
-        }
-
+      & .error {
+        border: 2px solid red;
+      }
     }
+    & .topic-card-title {
+      margin: 0px;
+      padding-left: 75px;
+      display: flex;
+      align-self: center;
+      & h1 {
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
+    }
+    & .topic-card-img-btn {
+      display: flex;
+      width: 100%;
+      translate: 0px 30%;
+      & button {
+        border: none;
+        padding: 10px;
+        font-size: 15px;
+        padding-left: 50px;
+        padding-right: 50px;
+        width: 200px;
+        height: 50px;
+        font-weight: bold;
+        &:hover {
+          background-color: lightgrey;
+          transition: all 200ms ease-in-out;
+        }
+      }
+      & .topic-card-img {
+        display: flex;
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        background-color: rgb(49, 38, 38);
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        & img {
+          height: 100%;
+        }
+      }
+    }
+  }
 }
