--- a/web/src/Styling/TopicCard.scss
+++ b/web/src/Styling/TopicCard.scss
@@ -15,6 +15,7 @@ $image-displacement-phone: 0%, 30%;
       & .topic-card-img {
         transform: scale(0.75);
         transition: transform 300ms ease-in;
+       
       }
     }
   }
@@ -26,7 +27,7 @@ $image-displacement-phone: 0%, 30%;
       flex-direction: row;
       justify-content: space-evenly;
       & .topic-card-img {
-        // transform:translate($image-displacement-screen);
+        transform:translate(20px,0);
         transform: scale(1);
         transition: transform 300ms ease-out;
       }
@@ -42,23 +43,37 @@ $image-displacement-phone: 0%, 30%;
   justify-content: center;
   & .topic-card {
     border: none !important;
+    background-color: white;
     & .topic-card-description {
-      padding-left: 1em;
-      padding-right: 1em;
+      padding-left: 2em;
+      padding-right: 2em;
       text-align: justify;
-      border: none !important;
+      border: none;
 
       & .error {
+        display:flex;
         border: 2px solid red;
+        border-radius:10px;
+        background-color: rgba(238, 7, 7, 0.625);
+        color:white;
+        align-items: center;
+        flex-direction:column;
+        & h1, h2 {
+            margin:0;
+            margin-bottom:20px;
+            margin-top:10px;
+
+        }
+
       }
     }
     & .topic-card-title {
       margin: 0px;
-      padding-left: 75px;
       display: flex;
+      padding-left:2rem;
       align-self: center;
       & h1 {
-        margin-top: 10px;
+        margin-top: 20px;
         margin-bottom: 10px;
       }
     }
@@ -72,12 +87,14 @@ $image-displacement-phone: 0%, 30%;
         font-size: 15px;
         padding-left: 50px;
         padding-right: 50px;
-        width: 200px;
+        width: 275px;
         height: 50px;
         font-weight: bold;
+        background-color: #D1D1D1;
         &:hover {
-          background-color: lightgrey;
+            background-color: #DADADA;
           transition: all 200ms ease-in-out;
+          transform:scale(1.05);
         }
       }
       & .topic-card-img {
