--- a/web/src/index.css
+++ b/web/src/index.css
@@ -12,6 +12,6 @@ code {
     monospace;
 }
 
-/* @tailwind base;
+/* @tailwind base; */
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
