--- a/web/src/Styling/TopicCard/TopicCard.scss
+++ b/web/src/Styling/TopicCard/TopicCard.scss
@@ -1,7 +1,4 @@
-$wide-screen-width: 600px;
-$phone-screen-width: 100vh;
-$image-displacement-screen: 40%, 30%;
-$image-displacement-phone: 0%, 30%;
+@import './variables.scss';
 
 @mixin screen-size-change {
   @media screen and (max-width: 601px) {
@@ -9,13 +6,10 @@ $image-displacement-phone: 0%, 30%;
       width: $phone-screen-width;
     }
     .topic-card-img-btn {
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+      @include img-btn-phone-display;
       & .topic-card-img {
-        transform: scale(0.75);
+        transform: scale($image-shrinkage);
         transition: transform 300ms ease-in;
-       
       }
     }
   }
@@ -24,8 +18,7 @@ $image-displacement-phone: 0%, 30%;
       width: $wide-screen-width;
     }
     .topic-card-img-btn {
-      flex-direction: row;
-      justify-content: space-evenly;
+      @include img-btn-screen-display;
       & .topic-card-img {
         transform:translate(20px,0);
         transform: scale(1);
