--- a/web/src/Styling/TopicCard/_variables.scss
+++ b/web/src/Styling/TopicCard/_variables.scss
@@ -14,3 +14,30 @@ $image-shrinkage: 0.75;
     flex-direction: row;
     justify-content: space-evenly;
 }
+@mixin screen-size-change {
+    @media screen and (max-width: 601px) {
+      .topic-card {
+        width: $phone-screen-width;
+      }
+      .topic-card-img-btn {
+        @include img-btn-phone-display;
+        & .topic-card-img {
+          transform: scale($image-shrinkage);
+          transition: transform 300ms ease-in;
+        }
+      }
+    }
+    @media screen and (min-width: 602px) {
+      .topic-card {
+        width: $wide-screen-width;
+      }
+      .topic-card-img-btn {
+        @include img-btn-screen-display;
+        & .topic-card-img {
+          transform:translate(20px,0);
+          transform: scale(1);
+          transition: transform 300ms ease-out;
+        }
+      }
+    }
+  }
