--- a/web/src/Styling/Header.module.scss
+++ b/web/src/Styling/Header.module.scss
@@ -41,14 +41,14 @@
         color: $offWhite;
         margin-right: 10px;
         font-size: 18px;
-        font-family: $fontFamily;
+        font-family: $fontStyle;
       }
 
       & button {
         border: none;
         margin-left: 1%;
         width: 75px;
-        height: 43px;
+        height: 30px;
         font-weight: bold;
         font-family: $fontStyle;
         font-size: 19px;
