--- a/web/src/Styling/TopicCard/TopicCard.scss
+++ b/web/src/Styling/TopicCard/TopicCard.scss
@@ -1,7 +1,22 @@
 @import './variables.scss';
 
 
-
+.api-error {
+  display:flex;
+  border: 2px solid red;
+  border-radius:10px;
+  background-color: rgba(238, 7, 7, 0.8);
+  color:white;
+  align-items: center;
+  justify-content: center;
+  flex-direction:column;
+  animation:error-wiggle 500ms ease-in forwards;
+  & h1, h2 {
+      margin:0;
+      margin-bottom:20px;
+      margin-top:10px;
+  }
+}
 .topic-card-parent {
   @include screen-size-change;
   margin: 0px;
@@ -16,19 +31,6 @@
       padding-right: 2em;
       text-align: justify;
       border: none;
-      & .error {
-        display:flex;
-        border: 2px solid red;
-        border-radius:10px;
-        background-color: rgba(238, 7, 7, 0.625);
-        color:white;
-        align-items: center;
-        flex-direction:column;
-        & h1, h2 {
-            margin:0;
-            margin-bottom:20px;
-            margin-top:10px;
-        }
       }
     }
     & .topic-card-title {
@@ -76,4 +78,4 @@
       }
     }
   }
-}
+
