--- a/web/src/Styling/TopicCard/_variables.scss
+++ b/web/src/Styling/TopicCard/_variables.scss
@@ -41,3 +41,25 @@ $image-shrinkage: 0.75;
       }
     }
   }
+
+
+@keyframes error-wiggle {
+  0% {
+    transform:translateX(-1%)
+  }
+  20% {
+    transform:translateX(1%)
+  }
+  40% {
+    transform:translateX(-0.5%)
+  }
+  60% {
+    transform:translateX(0.5%)
+  }
+  80% {
+    transform:translateX(-0.5%)
+  }
+  100% {
+    transform:translateX(0%)
+  }
+}
