--- a/web/src/Styling/TopicCard/TopicCard.css
+++ b/web/src/Styling/TopicCard/TopicCard.css
@@ -1,25 +1,31 @@
 @keyframes error-wiggle {
   0% {
-    transform: translateX(-1%);
+    transform: translateX(-2%);
   }
   20% {
-    transform: translateX(1%);
+    transform: translateX(2%);
   }
   40% {
-    transform: translateX(-0.5%);
+    transform: translateX(-2%);
   }
   60% {
-    transform: translateX(0.5%);
+    transform: translateX(2%);
   }
   80% {
-    transform: translateX(-0.5%);
+    transform: translateX(-2%);
   }
   100% {
     transform: translateX(0%);
   }
 }
-.api-error {
+.api-error-container {
   display: flex;
+  justify-content: center;
+  top: 40%;
+}
+.api-error-container .api-error {
+  display: flex;
+  width: 500px;
   border: 2px solid red;
   border-radius: 10px;
   background-color: rgba(238, 7, 7, 0.8);
@@ -27,9 +33,9 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  animation: error-wiggle 500ms ease-in forwards;
+  animation: error-wiggle 400ms ease-in forwards;
 }
-.api-error h1, .api-error h2 {
+.api-error-container .api-error h1, .api-error-container .api-error h2 {
   margin: 0;
   margin-bottom: 20px;
   margin-top: 10px;
