--- a/web/src/components/Header.scss
+++ b/web/src/components/Header.scss
@@ -1,51 +1,20 @@
-$white: #fff;
-$black: #000;
-$bg-button-inactive: #323232;
-$btn-text-inactive: #6e6e6e;
-$phone-width: 400.5px;
-$desktop-width: 1000.5px;
-
-@mixin flex-row {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-}
-
-@mixin select-style {
-  width: 40px;
-  height: 15px;
-  border: none;
-  text-align: center;
-  font-weight: bolder;
-  position: relative;
-  padding-right: 5px;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  appearance: none;
-  background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 18 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
-  background-repeat: no-repeat, repeat;
-  background-position: right 1px top 50%, 0 0;
-  background-size: 15px auto, 50%;
-
-  @media (min-width: $phone-width) {
-    display: none;
-  }
-}
+@import "../styles/variables.scss";
 
 header {
   @include flex-row;
   background-color: $black;
+  height: 70px;
   justify-content: space-between;
 
   img {
-    width: 150px;
+    height: 60%;
     margin: 10px;
     margin-left: 30px;
     @media (min-width: $desktop-width) {
       margin-left: 15%;
     }
     @media (max-width: $phone-width) {
-      width: 100px;
+      height: 40%;
     }
   }
   div {
@@ -56,13 +25,19 @@ header {
       margin-right: 15%;
     }
     .btn {
-      width: 50px;
-      height: 25px;
-      margin: 1px;
+      border: none;
+      margin-left: 1%;
+      width: 75px;
+      height: 30px;
+      font-weight: bold;
+      font-family: $fontStyle;
+      font-size: 19px;
       background-color: $bg-button-inactive;
       border: none;
       color: $btn-text-inactive;
       font-weight: bolder;
+      font-family: $fontStyle;
+
       &.selected {
         background-color: $white;
         color: $black;
@@ -72,16 +47,13 @@ header {
       }
     }
     p {
-      color: $white;
+      color: $offWhite;
       margin-right: 10px;
-      font-size: smaller;
+      font-size: 16px;
+      font-family: $fontStyle;
     }
     .select-pg {
       @include select-style;
-    }
-    .select-adult {
-      @include select-style;
-      font-size: 10px;
     }
   }
 }
