--- a/web/src/Styles/BreadCrumbs/BreadCrumbs.css
+++ b/web/src/Styles/BreadCrumbs/BreadCrumbs.css
@@ -29,4 +29,20 @@
   #mobile {
     display: none;
   }
+}
+
+.desktop {
+  @apply ml-7 w-screen bg-backdrop;
+}
+
+.desktop-container {
+  @apply w-screen bg-backdrop text-white capitalize p-0.5;
+}
+
+.mobile-parent-btn {
+  @apply bg-backdrop2 pb-2 pt-2 text-left text-white capitalize w-screen;
+}
+
+.mobile-grandParent-btn {
+  @apply bg-backdrop pb-2 pt-2 text-left text-white capitalize w-screen;
 }/*# sourceMappingURL=BreadCrumbs.css.map */
