--- a/web/src/Styling/TopicCard/_variables.scss
+++ b/web/src/Styling/TopicCard/_variables.scss
@@ -3,7 +3,7 @@ $phone-screen-width: 100vh;
 $image-displacement-screen: 40%, 30%;
 $image-displacement-phone: 0%, 30%;
 $image-shrinkage: 0.75;
-
+$error-wiggle-size: 2%;
 @mixin img-btn-phone-display {
     flex-direction: column;
     align-items: center;
@@ -45,19 +45,19 @@ $image-shrinkage: 0.75;
 
 @keyframes error-wiggle {
   0% {
-    transform:translateX(-2%)
+    transform:translateX($error-wiggle-size)
   }
   20% {
-    transform:translateX(2%)
+    transform:translateX(-$error-wiggle-size)
   }
   40% {
-    transform:translateX(-2%)
+    transform:translateX($error-wiggle-size)
   }
   60% {
-    transform:translateX(2%)
+    transform:translateX(-$error-wiggle-size)
   }
   80% {
-    transform:translateX(-2%)
+    transform:translateX($error-wiggle-size)
   }
   100% {
     transform:translateX(0%)
