--- a/web/src/index.css
+++ b/web/src/index.css
@@ -7,9 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #4e4d4d;
 }
-
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
