--- a/web/src/Styling/TopicCard/TopicCard.css
+++ b/web/src/Styling/TopicCard/TopicCard.css
@@ -51,6 +51,8 @@
 .topic-card-parent .topic-card-title h1 {
   margin-top: 20px;
   margin-bottom: 10px;
+  @apply text-2xl;
+  @apply font-bold;
 }
 .topic-card-parent .topic-card-img-btn {
   display: flex;
@@ -66,10 +68,10 @@
   width: 275px;
   height: 50px;
   font-weight: bold;
-  background-color: #D1D1D1;
+  background-color: #d1d1d1;
 }
 .topic-card-parent .topic-card-img-btn button:hover {
-  background-color: #DADADA;
+  background-color: #dadada;
   transition: all 200ms ease-in-out;
   transform: scale(1.05);
 }
@@ -85,4 +87,5 @@
 }
 .topic-card-parent .topic-card-img-btn .topic-card-img img {
   height: 100%;
+  @apply object-cover;
 }/*# sourceMappingURL=TopicCard.css.map */
