--- a/web/src/Global/Header/Header.css
+++ b/web/src/Global/Header/Header.css
@@ -7,20 +7,24 @@ header {
   height: 70px;
   justify-content: space-between;
 }
-header img {
-  height: 60%;
-  margin: 10px;
+header a {
+  display: flex;
+  height: 100%;
+  align-items: center;
   margin-left: 30px;
 }
 @media (min-width: 1000.5px) {
-  header img {
+  header a {
     margin-left: 15%;
   }
 }
 @media (max-width: 400.5px) {
-  header img {
-    height: 40%;
+  header a {
+    height: 70%;
   }
+}
+header a img {
+  height: 60%;
 }
 header div {
   display: flex;
