--- a/web/src/Global/Header/Header.scss
+++ b/web/src/Global/Header/Header.scss
@@ -6,10 +6,10 @@ header {
   height: 70px;
   justify-content: space-between;
   a {
-    display:flex;
-    height:100%;
+    display: flex;
+    height: 100%;
     align-items: center;
-    margin-left:30px;
+    margin-left: 30px;
     @media (min-width: $desktop-width) {
       margin-left: 15%;
     }
@@ -17,14 +17,14 @@ header {
       height: 70%;
     }
     img {
-       height: 60%;
-       &:hover {
-        transition:all 200ms ease-in-out;
-        transform:scale(1.05)
-       }
+      height: 60%;
+      &:hover {
+        transition: all 200ms ease-in-out;
+        transform: scale(1.05);
+      }
     }
   }
-  
+
   div {
     @include flex-row;
     margin-right: 30px;
