adding in tests and on hover efffect

--- a/web/src/Global/Header/Header.css
+++ b/web/src/Global/Header/Header.css
@@ -26,6 +26,10 @@ header a {
 header a img {
   height: 60%;
 }
+header a img:hover {
+  transition: all 200ms ease-in-out;
+  transform: scale(1.05);
+}
 header div {
   display: flex;
   align-items: center;
