--- a/web/src/Global/Header/Header.scss
+++ b/web/src/Global/Header/Header.scss
@@ -18,6 +18,10 @@ header {
     }
     img {
        height: 60%;
+       &:hover {
+        transition:all 200ms ease-in-out;
+        transform:scale(1.05)
+       }
     }
   }
   
