--- a/web/src/Global/Header/Header.css
+++ b/web/src/Global/Header/Header.css
@@ -1,46 +1,76 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Tilt+Warp&display=swap");
 header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   background-color: #000;
   height: 70px;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
+
 header a {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   height: 100%;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-left: 30px;
 }
+
 @media (min-width: 1000.5px) {
   header a {
     margin-left: 15%;
   }
 }
+
 @media (max-width: 400.5px) {
   header a {
     height: 70%;
   }
 }
+
 header a img {
   height: 60%;
 }
+
 header a img:hover {
+  -webkit-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
-  transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
+
 header div {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   margin-right: 30px;
 }
+
 @media (min-width: 1000.5px) {
   header div {
     margin-right: 15%;
   }
 }
+
 header div .btn {
   border: none;
   margin-left: 1%;
@@ -55,15 +85,18 @@ header div .btn {
   font-weight: bolder;
   font-family: "Tilt Warp", cursive;
 }
+
 header div .btn.selected {
   background-color: #fff;
   color: #000;
 }
+
 @media (max-width: 400.5px) {
   header div .btn {
     display: none;
   }
 }
+
 header div p {
   color: #e3e3e3;
   margin-right: 10px;
@@ -72,6 +105,7 @@ header div p {
   min-width: 70px;
   text-align: right;
 }
+
 header div .select-pg {
   width: 75px;
   height: 37px;
@@ -89,8 +123,10 @@ header div .select-pg {
   background-position: right 1px top 50%, 0 0;
   background-size: 15px auto, 50%;
 }
+
 @media (min-width: 400.5px) {
   header div .select-pg {
     display: none;
   }
-}/*# sourceMappingURL=Header.css.map */
+}
+/*# sourceMappingURL=Header.css.map */
