--- a/web/src/Styling/TopicBreadcrumbs/TopicBreadcrumbs.css
+++ b/web/src/Styling/TopicBreadcrumbs/TopicBreadcrumbs.css
@@ -2,17 +2,22 @@
 @media (max-width: 400px) {
   #desktop {
     display: none;
+    margin-top: 30px;
   }
 }
+
 @media (min-width: 400px) {
   #desktop {
     display: block;
+    margin-top: 30px;
   }
 }
-@media (min-width: 1000px) {
+
+@media (min-width: 1001px) {
   #desktop {
     display: block;
-    margin-left: 15%;
+    margin-top: 30px;
+    margin-left: 14.6%;
   }
 }
 
@@ -21,12 +26,14 @@
     display: block;
   }
 }
+
 @media (min-width: 400px) {
   #mobile {
     display: none;
   }
 }
-@media (min-width: 1000px) {
+
+@media (min-width: 1001px) {
   #mobile {
     display: none;
   }
@@ -46,4 +53,5 @@
 
 .mobile-grandParent-btn {
   @apply bg-backdrop pb-2 pt-2 text-left text-white capitalize w-screen;
-}/*# sourceMappingURL=TopicBreadcrumbs.css.map */
+}
+/*# sourceMappingURL=TopicBreadcrumbs.css.map */
