--- a/web/src/Styling/TopicCard/TopicCard.css
+++ b/web/src/Styling/TopicCard/TopicCard.css
@@ -1,67 +1,108 @@
 .topic-card-parent {
   margin: 0px;
   margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
-@media screen and (max-width: 601px) {
+
+@media screen and (max-width: 1000px) {
   .topic-card-parent .topic-card {
-    width: 100vh;
+    width: 70.5%;
   }
   .topic-card-parent .topic-card-img-btn {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .topic-card-parent .topic-card-img-btn .topic-card-img {
-    transform: scale(0.75);
+    -webkit-transform: scale(0.75);
+            transform: scale(0.75);
+    -webkit-transition: -webkit-transform 300ms ease-in;
+    transition: -webkit-transform 300ms ease-in;
     transition: transform 300ms ease-in;
+    transition: transform 300ms ease-in, -webkit-transform 300ms ease-in;
   }
 }
-@media screen and (min-width: 602px) {
+
+@media screen and (min-width: 1001px) {
   .topic-card-parent .topic-card {
-    width: 600px;
+    width: 830px;
   }
   .topic-card-parent .topic-card-img-btn {
-    flex-direction: row;
-    justify-content: space-evenly;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
   }
   .topic-card-parent .topic-card-img-btn .topic-card-img {
-    transform: translate(20px, 0);
-    transform: scale(1);
+    -webkit-transform: translate(20px, 0);
+            transform: translate(20px, 0);
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transition: -webkit-transform 300ms ease-out;
+    transition: -webkit-transform 300ms ease-out;
     transition: transform 300ms ease-out;
+    transition: transform 300ms ease-out, -webkit-transform 300ms ease-out;
   }
 }
+
 .topic-card-parent .topic-card {
   border: none !important;
   background-color: white;
 }
+
 .topic-card-parent .topic-card .topic-card-description {
   padding-left: 2em;
   padding-right: 2em;
   text-align: justify;
   border: none;
 }
+
 .topic-card-parent .topic-card-title {
   margin: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding-left: 2rem;
-  align-self: center;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
+
 .topic-card-parent .topic-card-title h1 {
   margin-top: 20px;
-  margin-bottom: 10px;
-  @apply text-2xl;
+  margin-bottom: 20px;
+  @apply text-4xl;
   @apply font-bold;
 }
+
 .topic-card-parent .topic-card-img-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: 32px;
+  margin-right: 85px;
   translate: 0px 30%;
 }
+
 .topic-card-parent .topic-card-img-btn button {
   border: none;
-  padding: 10px;
   font-size: 15px;
   padding-left: 50px;
   padding-right: 50px;
@@ -70,22 +111,34 @@
   font-weight: bold;
   background-color: #d1d1d1;
 }
+
 .topic-card-parent .topic-card-img-btn button:hover {
   background-color: #dadada;
+  -webkit-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
-  transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
+
 .topic-card-parent .topic-card-img-btn .topic-card-img {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
   border-radius: 50%;
-  background-color: rgb(49, 38, 38);
-  justify-content: center;
-  align-items: center;
+  background-color: #312626;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   overflow: hidden;
 }
+
 .topic-card-parent .topic-card-img-btn .topic-card-img img {
   height: 100%;
   @apply object-cover;
-}/*# sourceMappingURL=TopicCard.css.map */
+}
+/*# sourceMappingURL=TopicCard.css.map */
