--- a/web/src/Styling/TopicCard/TopicCard.scss
+++ b/web/src/Styling/TopicCard/TopicCard.scss
@@ -14,6 +14,7 @@
       padding-right: 2em;
       text-align: justify;
       border: none;
+      overflow: auto;
     }
   }
   & .topic-card-title {
